--- a/style.css
+++ b/style.css
@@ -74,3 +74,56 @@ main{
     height: 450px;
     border-radius: var(--border-sm);
 }
+
+/* Music Header */
+
+#music-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.header-item{
+    text-align: center;
+}
+
+.header-item h3 {
+    margin: 0;
+}
+
+/* volume control styles */
+
+.volume-btn {
+    position: relative;
+}
+
+.volume-control {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    display: none;
+  }
+
+  .volume-btn:hover .volume-control {
+    display: block;
+  }
+  
+  #volume-range {
+    width: 100px;
+    appearance: none;
+    background-color: var(--white-color);
+    cursor: pointer;
+  }
+  
+  #volume-range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 10px;
+    height: 10px;
+    background-color: #007bff;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
