added new styling for music card

--- a/style.css
+++ b/style.css
@@ -1,129 +1,273 @@
 /* Google Fonts Import */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
 
 /* CSS Variables */
-:root{
-    --bg-dark: hsl(0, 0%, 7%);
-    --bg-dark-100: hsl(0, 0%, 12%);
-    --white-color: hsl(0, 0%, 94%);
-    --text-dark: hsl(300, 15%, 5%);
-    --border-sm: 25px;
-    --fs-1: clamp(0.875rem, 0.5173173803526449rem + 1.0075566750629723vw, 1.125rem);
-    --fs-icon: clamp(1.125rem, 0.5884760705289672rem + 1.5113350125944585vw, 1.5rem);
-    --ff: "Poppins", sans-serif;
+:root {
+  --bg-dark: hsl(0, 0%, 7%);
+  --bg-dark-100: hsl(0, 0%, 12%);
+  --white-color: hsl(0, 0%, 94%);
+  --text-dark: hsl(300, 15%, 5%);
+  --accent-color: hsl(175, 88%, 50%);
+  --border-sm: 25px;
+  --fs-1: clamp(
+    0.875rem,
+    0.5173173803526449rem + 1.0075566750629723vw,
+    1.125rem
+  );
+  --fs-icon: clamp(
+    1.125rem,
+    0.5884760705289672rem + 1.5113350125944585vw,
+    1.85rem
+  );
+  --ff: "Poppins", sans-serif;
+  --bx-shadow: 0 0 18px hsla(207, 100%, 98%, 0.7);
 }
 
 /* Global CSS Reset */
 *,
 *::before,
-*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
 /* Body */
-body{
-    background: var(--bg-dark);
-    line-height: 1.5;
-    font-size: var(--fs-1);
-    font-family: var(--ff);
-    color: var(--white-color);
-    padding-inline: 1em;
+body {
+  background: var(--bg-dark);
+  line-height: 1.5;
+  font-size: var(--fs-1);
+  font-family: var(--ff);
+  color: var(--white-color);
+  padding-inline: 1em;
 }
 
 /* Utility Classes */
-.btn{
-    background: var(--white-color);
-    cursor: pointer;
-    padding: .85em 1.25em;
-    outline: 0;
-    border: 0;
-    border-radius: 50%;
-    height: 40px;
-    width: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btn {
+  background: var(--white-color);
+  cursor: pointer;
+  padding: 0.85em 1.25em;
+  outline: 0;
+  border: 0;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Icons */
-i{
-    font-size: var(--fs-icon);
+i {
+  font-size: var(--fs-icon);
 }
 
 /* Main */
-main{
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+main {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Music card */
-#music-card{
-    background: var(--bg-dark-100);
-    padding: 1.4em 1.6em;
-    width: 400px;
-    max-width: 100%;
-    height: 450px;
-    border-radius: var(--border-sm);
+#music-card {
+  background: var(--bg-dark-100);
+  padding: 1.4em 1.6em;
+  width: 400px;
+  max-width: 100%;
+  height: 450px;
+  border-radius: var(--border-sm);
+  display: grid;
+  grid-template-rows: auto 1fr auto auto;
+  grid-auto-rows: max-content 1fr max-content max-content;
+  gap: 0.35em;
 }
 
 /* Music Header */
-
-#music-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+#music-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
-.header-item{
-    text-align: center;
+.header-item {
+  text-align: center;
 }
 
 .header-item h3 {
-    margin: 0;
+  margin: 0;
 }
 
 /* volume control styles */
 
 .volume-btn {
-    position: relative;
+  position: relative;
 }
 
 .volume-control {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 0;
-    display: none;
-  }
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  display: none;
+}
 
-  .volume-btn:hover .volume-control {
-    display: block;
-  }
-  
-  #volume-range {
-    width: 100px;
+.volume-btn:hover .volume-control {
+  display: block;
+}
+
+#volume-range {
+  width: 100px;
+  appearance: none;
+  background-color: var(--white-color);
+  cursor: pointer;
+}
+
+#volume-range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  background-color: #007bff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+/* Music Album */
+#music-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.24em;
+  text-align: center;
+}
+
+.album-cover {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 10px rgba(17, 17, 17, 0.089);
+  background-image: url("https://www.billboard.com/wp-content/uploads/2023/07/J.-Cole-2014-Forest-Hills-Drive-2014-album-art-billboard-1240.jpg?w=1024");
+  position: relative;
+  background-size: cover;
+  animation: spin 10s linear infinite;
+  animation-play-state: paused;
+  margin-block-start: 0.75em;
+  box-shadow: var(--bx-shadow);
+}
+
+.album-cover::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: var(--white-color);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+
+/* Music progress */
+#music-progress {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+}
+
+#progress-bar{
+    --webkit-appearance: none;
     appearance: none;
+    height: 0.3em;
+    border-radius: var(--border-sm);
+    width: 100%;
     background-color: var(--white-color);
     cursor: pointer;
-  }
-  
-  #volume-range::-webkit-slider-thumb {
-    -webkit-appearance: none;
+    overflow: hidden;
+}
+
+
+#progress-bar::-webkit-slider-thumb{
+    --webkit-appearance: none;
     appearance: none;
-    width: 10px;
-    height: 10px;
-    background-color: #007bff;
+    width: 5px;
+    height: 20px;
     border-radius: 50%;
+    background: var(--bg-dark-100);
+    box-shadow: -400px 0 0 400px var(--accent-color);
+    border: none;
     cursor: pointer;
+}
+
+#progress-bar::-webkit-slider-runnable-track {
+    --webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    background: var(--bx-shadow);
+}
+
+#progress-bar::-moz-range-thumb {
+    width: 1px;
+    height: 20px;
+    background: var(--accent-color);
+    box-shadow: -400px 0 0 400px var(--white-color);
+    border: none;
+    cursor: pointer;
+}
+
+
+.music-timer {
+  display: flex;
+  justify-content: space-between;
+  margin-block-start: 0;
+
+  & p{
+    font-size: .8rem;
   }
-  
+}
+
+/* Music Controls */
+.music-controls {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 2em;
+  padding-block-start: .5em;
+}
+
+#playPauseBtn {
+  background: var(--accent-color);
+  height: 50px;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  animation: pulse 5s linear infinite;
+}
+
+.playBtn-icon {
+  font-size: var(--fs-icon);
+}
+
+.music-controls .btn:first-child,
+.music-controls .btn:last-child {
+  height: 30px;
+  width: 30px;
+  padding: .25em .8em;
+
+  & i{
+    font-size: 1.28em;
+    font-weight: 500;
+  }
+}
